# stream-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
monitoring/: prometheus.yml
scripts/: seed_data.py  setup_topics.sh
sql/: init.sql  queries.sql
src/: config.py
src/consumer/: consumer.py  processors.py  windowing.py
src/dashboard/: app.py
src/dashboard/static/: dashboard.js
src/dashboard/templates/: index.html
src/metrics/: prometheus.py
src/producer/: event_generator.py  producer.py
src/schemas/: aggregated.avsc  clickstream.avsc
src/sink/: dead_letter.py  postgres_sink.py
tests/: test_dead_letter.py  test_processors.py  test_windowing.py
